2008-05-17  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.ui: Tweaks to the UI.

2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/orbitalsettingswidget.ui: Propagate new grids
	through to the combo and some UI cleanup.

2008-05-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/iso.cpp: Surfaces are now centered around atom
	again. The - 0.5 * m_stepSize correction is only needed for 
	vMarchCube1(float,float,float). This is a bug in OBFloatGrid? 

2008-05-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/drawtool.*: Use new
	OBForceField::SetIgnoreAtom() to make sure the new atom doesn't push
	away other fragment you want to connect with. Also fix the atom when
	you hit an atom that already exists. This makes drawing rings with
	AutoOpt enabled really easy.

	* libavogadro/src/autoopttool.*: Use new OBForceField::SetFixAtom()

	* libavogadro/src/extensions/animationdialog.ui: Make the dialog
	more compact. Removed the group boxes.

2008-05-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/tools/autorotatetool.cpp, 
	libavogadro/src/extensions/animationextension.cpp, 
	libavogadro/src/extensions/orbitalextension.cpp, 
	libavogadro/src/extensions/gaussianextension.cpp, 
	libavogadro/src/extensions/propextension.cpp, 
	avogadro/src/mainwindow.ui, avogadro/src/mainwindow.cpp:
	More interface cleanup -- any menu item or button which brings up
	a dialog should have "..." at the end. (KDE, Windows, and Mac UI guidelines.)
	
2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitaldialog.*: Hide more advanced
	options for now, minor cleanup.

	* libavogadro/src/tools/aligntool.*: Added options to align everything
	or just the current molecule.

	* libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/autorotatetool.cpp,
	libavogadro/src/tools/bondcentrictool.cpp,